--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Personal website of a Computer Science PhD student.">
-    <title>PhD Student | Computer Science</title>
+    <meta name="description" content="Manavjeet Singh's personal website.">
+    <title>Manavjeet Singh | PhD Candidate | Computer Science</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -79,7 +79,7 @@
                 <br>
                 <li> Bryan Bo Cao, Abhinav Sharma, <strong>Manavjeet Singh</strong>, Anshul Gandhi,  Samir Das, Shubham Jain. 2024. Representation Similarity: A Better Guidance of DNN Layer Sharing for Edge Computing without Training. To Appear In Proceedings of the 15th ACM Wireless of the Students, by the Students, and for the Students (S3) Workshop (S3 '24). </li>
                 <br>
-                <li> Anshak Goel, Deeptorshi Mondal, <strong>Manavjeet Singh</strong>, Sahil Goyal, Navneet Agarwal, Jian Xu, Mukulika Maity, Arani Bhattacharya, ``FlexDisplay: A Flexible Display Framework To Conserve Smartphone Battery Power," 2024 IEEE International Conference on Pervasive Computing and Communications Workshops and other Affiliated Events (PerCom Workshops), Biarritz, France, 2024, pp. 401-404, doi: 10.1109/PerComWorkshops59983.2024.10502958.</li>
+                <li> Anshak Goel, Deeptorshi Mondal, <strong>Manavjeet Singh</strong>, Sahil Goyal, Navneet Agarwal, Jian Xu, Mukulika Maity, Arani Bhattacharya, "FlexDisplay: A Flexible Display Framework To Conserve Smartphone Battery Power," 2024 IEEE International Conference on Pervasive Computing and Communications Workshops and other Affiliated Events (PerCom Workshops), Biarritz, France, 2024, pp. 401-404, doi: 10.1109/PerComWorkshops59983.2024.10502958.</li>
                 <br>
                 <li> Ritik Garg, Rushil Thareja, Manak Bisht, <strong>Manavjeet Singh</strong>, Sarthak Arora, and Jainendra Shukla. 2024. InMDb: Indian Movie Database for Emotion Analysis. In Proceedings of the Fourteenth Indian Conference on Computer Vision, Graphics and Image Processing (ICVGIP '23). Association for Computing Machinery, New York, NY, USA, Article 34, 1–10. https://doi.org/10.1145/3627631.3627665</li>
             </ul>
