--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <div class="container">
             <h2>Publications</h2>
             <ul>
-                <li><strong>Manavjeet Singh</strong>, Sri Pramodh Rachuri, Bryan Bo Cao, Abhinav Sharma, Venkata Bhumireddy, Francesco Bronzino, Samir Das, Anshul Gandhi, Shubham Jain, "OVIDA: Orchestrator for Video Analytics on Disaggregated Architecture," To Appear in 2024 IEEE/ACM Symposium on Edge Computing (SEC), Rome, Italy, 2024.</li>
+                <li><strong>Manavjeet Singh</strong>, Sri Pramodh Rachuri, Bryan Bo Cao, Abhinav Sharma, Venkata Bhumireddy, Francesco Bronzino, Samir Das, Anshul Gandhi, Shubham Jain, <a href="papers/ovida.pdf">"OVIDA: Orchestrator for Video Analytics on Disaggregated Architecture,"</a> To Appear in 2024 IEEE/ACM Symposium on Edge Computing (SEC), Rome, Italy, 2024.</li>
                 <br>
                 <li> Bryan Bo Cao, Abhinav Sharma, <strong>Manavjeet Singh</strong>, Anshul Gandhi,  Samir Das, Shubham Jain. 2024. Representation Similarity: A Better Guidance of DNN Layer Sharing for Edge Computing without Training. To Appear In Proceedings of the 15th ACM Wireless of the Students, by the Students, and for the Students (S3) Workshop (S3 '24). </li>
                 <br>
